--- a/notebook/1_data_ingest.ipynb
+++ b/notebook/1_data_ingest.ipynb
@@ -946,7 +946,7 @@
    "id": "41d30533-ecc1-4637-b5ea-fa617addbb14",
    "metadata": {},
    "source": [
-    "Examining the histogram with its overlaid density curve, we observe a right-skewed distribution of loan amounts with pronounced spikes at \\$5 000, \\$10 000, \\$15 000, \\$20 000, \\$25 000, \\$30 000 and \\$35 000—each corresponding to LendingClub’s standardized tiers. The \\$10 000 loan is the most frequent (just under 120 000 loans), followed by \\$15 000 and \\$20 000. Roughly 75 % of loans fall between \\$5 000 and \\$20 000, with relatively few below \\$5 000 or above \\$35 000. This stepped, peaked pattern suggests that instead of a continuous transformation, we should consider binning `loan_amount` (or treating it as categorical) to capture the non-linear risk characteristics tied to each standard tier. "
+    "Examining the histogram with its overlaid density curve, we observe a right-skewed distribution of loan amounts with pronounced spikes at &dollar;5,000, &dollar;10,000, &dollar;15,000, &dollar;20,000, &dollar;25,000, &dollar;30,000, and &dollar;35,000 — each corresponding to LendingClub’s standardized `loan_amount` tiers. The &dollar;10,000 loan size is the most frequent (just under 120,000 loans), followed by &dollar;15,000 and &dollar;20,000. Roughly 75% of loans fall between &dollar;5,000 and &dollar;20,000, with relatively few below &dollar;5,000 or above &dollar;35,000. This stepped, peaked pattern suggests that instead of a continuous transformation, we should treat `loan_amount` as a categorical or binned feature to capture the non-linear risk differences tied to each standard tier."
    ]
   },
   {
