--- a/notebook/2_feature_engineering.ipynb
+++ b/notebook/2_feature_engineering.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/Cathaml/Desktop/loans_fe.csv.csv', index=False)"
+    "df.to_csv('/Users/Cathaml/Desktop/loans_fe.csv', index=False)"
    ]
   }
  ],
